# N-Split

./: .gitignore  README.md  index.html  package-lock.json  package.json  prd.md  vite.config.ts
docs/: 기능2-구매상세내역.md  사전관리_단어관리.xlsx  사전관리_도메인관리.xlsx  사전관리_용어관리.xlsx
nsplit-backend/: .env.example  README.md  pyproject.toml  requirements.txt
nsplit-backend/app/: auth.py  config.py  database.py  dependencies.py  main.py
nsplit-backend/app/api/v1/: auth.py  positions.py  sessions.py
nsplit-backend/app/models/: __init__.py  guid.py  position.py  session.py  session_event.py  user.py
nsplit-backend/app/schemas/: __init__.py  auth.py  position.py  session.py  session_event.py  user.py
nsplit-backend/app/services/: simulator_client.py
nsplit-backend/app/workers/: auto_trading_worker.py
nsplit-frontend/: README.md  index.html  package.json
nsplit-frontend/src/: App.jsx
nsplit-frontend/src/components/: ProtectedRoute.jsx
nsplit-frontend/src/contexts/: AuthContext.jsx
nsplit-frontend/src/pages/: LoginPage.jsx  SessionCreatePage.jsx  SessionDetailPage.jsx  SessionListPage.jsx
simulator-backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
simulator-backend/app/: config.py  dependencies.py  main.py
src/: App.tsx  types.ts
src/components/: CreateStrategyModal.tsx  Dashboard.tsx  Layout.tsx  StatusFilter.tsx  StrategyCard.tsx
src/mocks/: purchaseDetailsData.ts  strategyData.ts
src/pages/: PurchaseDetailsPage.tsx  PurchaseDetailsPageContainer.tsx
supabase/migrations/: 20250129073904_navy_grass.sql
(+20 files in other folders)
